docs: find all currencies handler
